--- a/SisMaper/Views/CrudPessoaFisica.xaml
+++ b/SisMaper/Views/CrudPessoaFisica.xaml
@@ -15,7 +15,7 @@
     x:Class="SisMaper.Views.CrudPessoaFisica"
     x:Name="this"
     mc:Ignorable="d"
-    Title="Pessoa Física"
+    Title="Cliente"
     TitleCharacterCasing="Normal"
     MinHeight="650"
     MinWidth="400"
@@ -150,7 +150,7 @@
 
     <Grid x:Name="grid" >
         <TabControl>
-            <TabItem Header="Pessoa Física" Height="35" x:Name="PessoaFisicaTabItem">
+            <TabItem Header="  Pessoa Física  " Height="35" x:Name="PessoaFisicaTabItem" >
                 <StackPanel>
             
                         <StackPanel Orientation="Horizontal">
@@ -271,7 +271,7 @@
 
             </TabItem>
 
-            <TabItem Header="Pessoa Jurídica" Height="35" x:Name="PessoaJuridicaTabItem">
+            <TabItem Header="  Pessoa Jurídica  " Height="35" x:Name="PessoaJuridicaTabItem">
                 <StackPanel>
 
                     <StackPanel Orientation="Horizontal">
