--- a/SisMaper/Views/Login.xaml
+++ b/SisMaper/Views/Login.xaml
@@ -59,7 +59,7 @@
                 Value="4" />
             <Setter
                 Property="SelectionBrush"
-                Value="{DynamicResource  MahApps.Brushes.Highlightt}" />
+                Value="{DynamicResource  MahApps.Brushes.Highlight}" />
             <Setter
                 Property="SnapsToDevicePixels"
                 Value="True" />
